# Pointnet2

./: train_multi_gpu.py
models/: pointnet2_sem_seg(copy).py  pointnet2_sem_seg.py
scannet/: check_dataset.py  pc_util.py  scannet_dataset.py  train.py
scannet/preprocessing/: scannet_util.py
tf_ops/3d_interpolation/: CMakeLists.txt  tf_interpolate_compile.sh  tf_interpolate_op_test.py
tf_ops/grouping/: tf_grouping_compile.sh
tf_ops/sampling/: tf_sampling_compile.sh
